Odd linear gradient bug fix, at least on Firefox.

--- a/static/elements.css
+++ b/static/elements.css
@@ -28,7 +28,7 @@
 .follow.following .on-nekoweb {display:none}
 /* Postbox */
 .post-box {
-    background: linear-gradient(0.25turn, #e6ffff 45%, #0000 50%), url(//nekoweb.org/site/wiki/files/background-animated.svg?original=1), #e6ffff;
+    background: linear-gradient(0.25turn, #e6ffff 46%, #0000 51%), url(//nekoweb.org/site/wiki/files/background-animated.svg?original=1), #e6ffff;
     background-size: contain;
     border: none;
 }
